@@ -1,3 +1,7 @@
+2004-03-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* unix/dltest/pkgua.c: Fix minor syntax problems. [Bug 909288]
+
 2004-03-03  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.5a1 TAGGED FOR RELEASE ***
